# VideoTags

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Doxyfile  Makefile  README.md  Tag_Info.txt  VideoTags  cmake_install.cmake
Source/Include/: VideoTag.hpp  VideoTag.hpp~
Source/src/: VideoTag.cpp  VideoTag.cpp~
apriltags/: CMakeLists.txt
apriltags/.svn/: wc.db
apriltags/example/: CMakeLists.txt  VideoTag.cpp  VideoTag.hpp  apriltags_demo.cpp
pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
pod-build/example/: Makefile  cmake_install.cmake
pod-build/lib/pkgconfig/: apriltags.pc
source/include/: VideoTag.hpp
source/src/: VideoTag.cpp
